--- a/pomato_v2.0/assets/css/style.css
+++ b/pomato_v2.0/assets/css/style.css
@@ -74,17 +74,18 @@ margin:5em 0;
 display:block;
 }
 .banner-head h1{
-font-size:2.3em;
-color:#fff;
-text-transform:uppercase;
-font-weight:400;
-margin-bottom:10px;
+    font-size: 3.3em;
+    color: #fff;
+    font-weight: 700;
+    margin-bottom: 10px;
+    font-family: 'Poiret One';
 }
 .banner-head h2{
 color:#fff;
 font-size:2em;
 font-weight:100;
 letter-spacing:1px;
+font-family: 'Dosis';
 }
 .banner-links ul{
 background:#FFC600;
@@ -129,7 +130,7 @@ float:right;
 color:#fff;
 font-size:0.85em;
 text-decoration:none;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 }
 .content-grid-head h4 a{
 color:#f5a623;
@@ -161,7 +162,7 @@ color:#3d3f3c;
 line-height:1.5em;
 width:80%;
 font-size:0.95em;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 margin-bottom:1em;
 }
 .content-grid-info img,.content-sec-info img{
@@ -192,7 +193,7 @@ color:#f5a623;
 font-weight:400;
 font-size:0.85em;
 text-decoration:none;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 margin-bottom:1.3em;
 display:block;
 }
@@ -215,7 +216,7 @@ display:inline-block;
 margin:0 8px;
 font-size:0.95em;
 color:#f5a623;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 }
 .pages ul li.active a,.pages ul li a:hover{
 color:#0ab2d2;
@@ -243,7 +244,7 @@ letter-spacing:0.5px;
     width: 85%;
     font-weight: 400;
     font-size: 1em;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Dosis';
     cursor: pointer;
 }
 .search input[type="submit"] {
@@ -277,7 +278,7 @@ border-bottom:0px solid #D3CAB0;
 }
 .categories li a,.archives li a{
 color:#3d3f3c;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 font-size:0.95em;
 text-decoration:none;
 padding: 6px 0;
@@ -306,7 +307,7 @@ color:#F4D0BF;
 line-height:1.5em;
 margin-top:1em;
 font-size:0.9em;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 width:80%;
 }
 .fotter-list{
@@ -322,7 +323,7 @@ width:90%;
 padding:8px 0;
 color:#F4D0BF;
 text-decoration:none;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 font-size:0.9em;
 display:block;
 }
@@ -381,11 +382,11 @@ padding: 1em 0;
 .copywrite p {
 color: #8A685F;
 font-size: 1em;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 }
 .copywrite p a{
 color:#FFC600;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 }
 .copywrite p a:hover{
 color:#DF553E;
@@ -416,7 +417,7 @@ font-size: 1.2em;
 margin-bottom: 1.5em;
 color: #f5a623;
 background:#EFEAD8;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 outline: none;
 font-weight: 400;
 transition: 0.5s all ease;
@@ -440,7 +441,7 @@ border: 1px solid #f5a623;
 font-size: 1.2em;
 padding: 0.6em 3em;
 background:#EFEAD8;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 transition: 0.5s all;
 -webkit-transition: 0.5s all;
 -moz-transition: 0.5s all;
@@ -481,7 +482,7 @@ padding-bottom: 7em;
 }
 .address-info  p{
 color: #3d3f3c;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 font-size: 1em;
 text-decoration: none;
 padding-bottom:1px;
@@ -490,7 +491,7 @@ font-weight: 400;
 }
 .address-info p a{
 color: #0ab2d2;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 }
 .address-info h4 {
 color: #f5a623;
@@ -509,7 +510,7 @@ padding-bottom:1em;
 }
 .terms-sec-head p{
 color: #3d3f3c;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 font-size: 1em;
 line-height:1.5em;
 font-weight: 400;
@@ -526,14 +527,14 @@ font-size: 1.1em;
 .term p{
 color: #f5a623;
 font-size: 1em;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 line-height:1.6em;
 margin-top:0.8em;
 }
 .term li{
 color: #f5a623;
 font-size:1em;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 padding:5px 2em;
 }
 li.list{
@@ -542,7 +543,7 @@ margin-top:1em;
 p.agree{
 display:inline-block;
 color: #3d3f3c;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 font-size: 1em;
 font-weight: 400;
 margin-left: 0.5em;
@@ -557,7 +558,7 @@ font-size: 1em;
 margin-top:1em;
 padding: 0.5em 2em;
 background: #EFEAD8;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 transition: 0.5s all;
 -webkit-transition: 0.5s all;
 -moz-transition: 0.5s all;
@@ -608,7 +609,7 @@ font-family: 'Oswald', sans-serif;
 color: #3d3f3c;
 line-height: 1.5em;
 font-size: 0.95em;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 margin-bottom: 1em;
 display:block;
 }
@@ -616,7 +617,7 @@ display:block;
 color: #3d3f3c;
 line-height: 1.8em;
 font-size: 0.95em;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 margin-top: 1em;
 }
 .content-form{
@@ -635,7 +636,7 @@ width: 80%;
 color: #333;
 font-size: 1em;
 border: 1px solid #F6F1DE;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 background: #F6F1DE;
 outline: none;
 display: block;
@@ -685,14 +686,14 @@ font-size: 1em;
 color:#0ab2d2;
 margin: 0px;
 font-weight: 600;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 margin-bottom:0.5em;
 }
 .comment-info p {
 color: #3d3f3c;
 line-height: 1.5em;
 font-size: 0.95em;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 margin:0 0 0.5em 0;
 }
 .comment-info h5{
@@ -700,7 +701,7 @@ color:#0ab2d2;
 font-size:0.85em;
 display:block;
 margin-bottom:1em;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 }
 .comment-info a{
 color:#f5a623;
@@ -709,7 +710,7 @@ padding: 0.5em 1.5em;
 text-decoration: none;
 font-size: 0.85em;
 display: inline-block;
-font-family: 'Source Sans Pro', sans-serif;
+font-family: 'Dosis';
 border: 1px solid #f5a623;
 }
 .comment-info a:hover{
