--- a/pomato_v2.0/assets/css/pomato.css
+++ b/pomato_v2.0/assets/css/pomato.css
@@ -143,7 +143,7 @@ nav div p{
 .carousel-inner .prev        { left: -33%; }
 .carousel-control.left,.carousel-control.right {background-image:none;}
 #testimonialCarousel .carousel-inner{
-  max-height: 30em;
+  max-height: 50em;
   min-height: 20em;
 }
 .footer {
@@ -159,20 +159,28 @@ nav div p{
   border: 1px solid #fff;
   background-color: #F3F3F3;
   box-shadow: 5px 5px 5px grey;
-  max-height: 30em;
+  max-height: 50em;
+  min-height: 18em;
   padding: 0.5em;
 }
 .photo img{
   width: 5em;
+  border: solid;
+  border-radius: 40px;
+  border-color: darkgrey;
 }
 .footer-grid h3 {
   font-family: "Dosis";
-  font-size: 1.5em;
+  font-size: 1em;
   color: grey;
 }
 .footer-grid  h2 {
-  font-size: 2em;
+  font-size: 1em;
   font-family: 'dosis';
+  text-align: justify;
+  padding: 0 1em 1em 1em;
+  font-weight: bold;
+  color: dimgray;
 }
 .social {
   text-align: center;
@@ -303,7 +311,11 @@ nav div p{
 #append-data{
   padding-top: 5em;
 }
-
+.loader {
+  margin-top: 1em;
+  width: 2em;
+  visibility: hidden;
+}
 #append-data .intl-tel-input {
   display: inline-block;
   vertical-align: middle;
@@ -332,7 +344,7 @@ nav div p{
 .container .intl-tel-input #user-phone-value {
   font-size: 1.5em;
   border: none;
-  width: 13em;
+  width: 11em;
   /* padding: 0.5em; */
   font-family: 'dosis';
 }
